--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Kanit|Prompt" rel="stylesheet">
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="js/jquery.min.js"></script>
   <style type="text/css">
     
 
